--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -53,7 +53,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>20</x>
       <y>120</y>
       <width>67</width>
       <height>17</height>
@@ -191,13 +191,13 @@
      </property>
     </widget>
    </widget>
-   <widget class="QGraphicsView" name="graphicsView">
+   <widget class="QCustomPlot" name="customPlot" native="true">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>70</y>
-      <width>256</width>
-      <height>192</height>
+      <x>370</x>
+      <y>150</y>
+      <width>251</width>
+      <height>181</height>
      </rect>
     </property>
    </widget>
@@ -223,6 +223,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
