--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QRadioButton" name="radioButton">
+   <widget class="QRadioButton" name="radioButtonMalhaAberta">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -27,7 +27,7 @@
      <string>Malha Aberta</string>
     </property>
    </widget>
-   <widget class="QRadioButton" name="radioButton_2">
+   <widget class="QRadioButton" name="radioButtonMalhaFechada">
     <property name="geometry">
      <rect>
       <x>150</x>
@@ -40,7 +40,7 @@
      <string>Malha Fechada</string>
     </property>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QGroupBox" name="groupBoxSaida">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -52,13 +52,13 @@
     <property name="title">
      <string>Canais de Saida</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>20</y>
        <width>87</width>
-       <height>74</height>
+       <height>83</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -91,7 +91,7 @@
        <x>130</x>
        <y>20</y>
        <width>87</width>
-       <height>74</height>
+       <height>83</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -118,13 +118,13 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>230</x>
        <y>20</y>
-       <width>73</width>
-       <height>48</height>
+       <width>77</width>
+       <height>54</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -144,10 +144,6 @@
       </item>
      </layout>
     </widget>
-    <zorder>checkBox_2</zorder>
-    <zorder></zorder>
-    <zorder>layoutWidget</zorder>
-    <zorder></zorder>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
@@ -170,7 +166,7 @@
      <string>Pseudo Controle</string>
     </property>
    </widget>
-   <widget class="QGroupBox" name="groupBox_2">
+   <widget class="QGroupBox" name="groupBoxEntrada">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -182,7 +178,7 @@
     <property name="title">
      <string>Entrada</string>
     </property>
-    <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+    <widget class="QDoubleSpinBox" name="SpinBoxNivel">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -195,7 +191,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QDoubleSpinBox" name="doubleSpinBox">
+    <widget class="QDoubleSpinBox" name="SpinBoxTensao">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -247,7 +243,7 @@
       <string>Sinal</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox">
+    <widget class="QSpinBox" name="spinBoxCanal">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -273,7 +269,7 @@
       <string>Canal</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="spinBox_2">
+    <widget class="QDoubleSpinBox" name="SpinBoxPeriodo">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -281,9 +277,15 @@
       <rect>
        <x>230</x>
        <y>140</y>
-       <width>48</width>
+       <width>51</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="singleStep">
+      <double>0.100000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
      </property>
     </widget>
     <widget class="QLabel" name="label_6">
@@ -299,7 +301,7 @@
       <string>Periodo</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="comboBox">
+    <widget class="QComboBox" name="comboBoxSinal">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -330,7 +332,7 @@
      <x>0</x>
      <y>0</y>
      <width>666</width>
-     <height>19</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
