--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>666</width>
-    <height>482</height>
+    <width>1200</width>
+    <height>700</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1200</width>
+    <height>700</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1200</width>
+    <height>700</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -44,106 +56,133 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>320</y>
-      <width>331</width>
-      <height>101</height>
+      <y>350</y>
+      <width>631</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>1200</width>
+      <height>1200</height>
+     </size>
     </property>
     <property name="title">
      <string>Canais de Saida</string>
     </property>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QCheckBox" name="checkBox">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>20</y>
-       <width>87</width>
-       <height>83</height>
+       <x>10</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QCheckBox" name="checkBox">
-        <property name="text">
-         <string>Canal 0</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_2">
-        <property name="text">
-         <string>Canal 1</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_3">
-        <property name="text">
-         <string>Canal 2</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <property name="text">
+      <string>Canal 0</string>
+     </property>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QCheckBox" name="checkBox_6">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>20</y>
-       <width>87</width>
-       <height>83</height>
+       <x>395</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QCheckBox" name="checkBox_4">
-        <property name="text">
-         <string>Canal 3</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_5">
-        <property name="text">
-         <string>Canal 4</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_6">
-        <property name="text">
-         <string>Canal 5</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <property name="text">
+      <string>Canal 5</string>
+     </property>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QCheckBox" name="checkBox_3">
      <property name="geometry">
       <rect>
-       <x>230</x>
-       <y>20</y>
-       <width>77</width>
-       <height>54</height>
+       <x>164</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <item>
-       <widget class="QCheckBox" name="checkBox_7">
-        <property name="text">
-         <string>Canal 6</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="checkBox_8">
-        <property name="text">
-         <string>Canal 7</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <property name="text">
+      <string>Canal 2</string>
+     </property>
     </widget>
+    <widget class="QCheckBox" name="checkBox_7">
+     <property name="geometry">
+      <rect>
+       <x>472</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Canal 6</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_8">
+     <property name="geometry">
+      <rect>
+       <x>549</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Canal 7</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_5">
+     <property name="geometry">
+      <rect>
+       <x>318</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Canal 4</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_2">
+     <property name="geometry">
+      <rect>
+       <x>87</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Canal 1</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_4">
+     <property name="geometry">
+      <rect>
+       <x>241</x>
+       <y>30</y>
+       <width>71</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Canal 3</string>
+     </property>
+    </widget>
+    <zorder></zorder>
+    <zorder>checkBox</zorder>
+    <zorder>checkBox_6</zorder>
+    <zorder>checkBox_3</zorder>
+    <zorder>checkBox_7</zorder>
+    <zorder>checkBox_8</zorder>
+    <zorder>checkBox_5</zorder>
+    <zorder>checkBox_2</zorder>
+    <zorder>checkBox_4</zorder>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
@@ -172,7 +211,7 @@
       <x>20</x>
       <y>100</y>
       <width>331</width>
-      <height>201</height>
+      <height>241</height>
      </rect>
     </property>
     <property name="title">
@@ -332,24 +371,64 @@
       </rect>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>200</y>
+       <width>80</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Enviar</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>200</y>
+       <width>80</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Cancelar</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QCustomPlot" name="customPlot" native="true">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>120</y>
+      <x>380</x>
+      <y>140</y>
       <width>281</width>
       <height>181</height>
      </rect>
     </property>
    </widget>
+   <zorder>radioButtonMalhaAberta</zorder>
+   <zorder>radioButtonMalhaFechada</zorder>
+   <zorder>groupBoxSaida</zorder>
+   <zorder>label_4</zorder>
+   <zorder>groupBoxEntrada</zorder>
+   <zorder>customPlot</zorder>
+   <zorder>checkBox_2</zorder>
+   <zorder>checkBox_3</zorder>
+   <zorder>checkBox_4</zorder>
+   <zorder>checkBox_5</zorder>
+   <zorder>checkBox_6</zorder>
+   <zorder>checkBox_7</zorder>
+   <zorder>checkBox_8</zorder>
+   <zorder>checkBox_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>666</width>
+     <width>1200</width>
      <height>19</height>
     </rect>
    </property>
