--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -29,7 +29,7 @@
    <widget class="QRadioButton" name="radioButtonMalhaAberta">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>40</x>
       <y>70</y>
       <width>117</width>
       <height>22</height>
@@ -42,7 +42,7 @@
    <widget class="QRadioButton" name="radioButtonMalhaFechada">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>170</x>
       <y>70</y>
       <width>151</width>
       <height>22</height>
@@ -55,10 +55,10 @@
    <widget class="QGroupBox" name="groupBoxSaida">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>520</x>
       <y>100</y>
-      <width>321</width>
-      <height>91</height>
+      <width>621</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -86,8 +86,8 @@
     <widget class="QCheckBox" name="checkBox_6">
      <property name="geometry">
       <rect>
-       <x>87</x>
-       <y>50</y>
+       <x>393</x>
+       <y>30</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -112,8 +112,8 @@
     <widget class="QCheckBox" name="checkBox_7">
      <property name="geometry">
       <rect>
-       <x>164</x>
-       <y>50</y>
+       <x>470</x>
+       <y>30</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -125,8 +125,8 @@
     <widget class="QCheckBox" name="checkBox_8">
      <property name="geometry">
       <rect>
-       <x>241</x>
-       <y>50</y>
+       <x>547</x>
+       <y>30</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -138,8 +138,8 @@
     <widget class="QCheckBox" name="checkBox_5">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>50</y>
+       <x>316</x>
+       <y>30</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -178,7 +178,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>430</x>
       <y>0</y>
       <width>341</width>
       <height>51</height>
@@ -199,9 +199,9 @@
    <widget class="QGroupBox" name="groupBoxEntrada">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>40</x>
       <y>100</y>
-      <width>331</width>
+      <width>381</width>
       <height>241</height>
      </rect>
     </property>
@@ -214,7 +214,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>210</x>
+       <x>240</x>
        <y>40</y>
        <width>69</width>
        <height>31</height>
@@ -233,7 +233,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>80</x>
+       <x>110</x>
        <y>40</y>
        <width>69</width>
        <height>31</height>
@@ -252,7 +252,7 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>200</x>
        <y>40</y>
        <width>41</width>
        <height>31</height>
@@ -265,7 +265,7 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>60</x>
        <y>40</y>
        <width>51</width>
        <height>31</height>
@@ -278,7 +278,7 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>60</x>
        <y>90</y>
        <width>31</width>
        <height>31</height>
@@ -294,7 +294,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>80</x>
+       <x>110</x>
        <y>140</y>
        <width>48</width>
        <height>31</height>
@@ -307,7 +307,7 @@
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>60</x>
        <y>140</y>
        <width>41</width>
        <height>31</height>
@@ -323,7 +323,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>260</x>
        <y>140</y>
        <width>51</width>
        <height>31</height>
@@ -339,7 +339,7 @@
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>200</x>
        <y>140</y>
        <width>51</width>
        <height>31</height>
@@ -355,7 +355,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>80</x>
+       <x>110</x>
        <y>90</y>
        <width>201</width>
        <height>31</height>
@@ -365,7 +365,7 @@
     <widget class="QPushButton" name="pushButtonEnviar">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>90</x>
        <y>200</y>
        <width>80</width>
        <height>22</height>
@@ -378,7 +378,7 @@
     <widget class="QPushButton" name="pushButtonCancel">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>220</x>
        <y>200</y>
        <width>80</width>
        <height>22</height>
@@ -392,8 +392,8 @@
    <widget class="QCustomPlot" name="customPlot" native="true">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>20</y>
+      <x>40</x>
+      <y>360</y>
       <width>381</width>
       <height>271</height>
      </rect>
@@ -402,20 +402,40 @@
    <widget class="QCustomPlot" name="plotS1" native="true">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>360</y>
-      <width>381</width>
-      <height>271</height>
+      <x>520</x>
+      <y>180</y>
+      <width>301</width>
+      <height>211</height>
      </rect>
     </property>
    </widget>
    <widget class="QCustomPlot" name="plotS2" native="true">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>360</y>
-      <width>381</width>
-      <height>271</height>
+      <x>850</x>
+      <y>180</y>
+      <width>301</width>
+      <height>211</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>420</y>
+      <width>301</width>
+      <height>211</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>420</y>
+      <width>301</width>
+      <height>211</height>
      </rect>
     </property>
    </widget>
