--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -208,26 +208,7 @@
     <property name="title">
      <string>Entrada</string>
     </property>
-    <widget class="QDoubleSpinBox" name="SpinBoxNivel">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>240</x>
-       <y>40</y>
-       <width>69</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="maximum">
-      <double>30.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>0.010000000000000</double>
-     </property>
-    </widget>
-    <widget class="QDoubleSpinBox" name="SpinBoxTensao">
+    <widget class="QDoubleSpinBox" name="SpinBoxTensaoNivel">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -249,20 +230,7 @@
       <double>0.010000000000000</double>
      </property>
     </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>40</y>
-       <width>41</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Nível</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="labelTensaoNivel">
      <property name="geometry">
       <rect>
        <x>60</x>
