--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -55,10 +55,10 @@
    <widget class="QGroupBox" name="groupBoxSaida">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>100</y>
-      <width>621</width>
-      <height>61</height>
+      <x>40</x>
+      <y>470</y>
+      <width>431</width>
+      <height>91</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -70,109 +70,73 @@
     <property name="title">
      <string>Canais de Saida</string>
     </property>
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>40</x>
        <y>30</y>
-       <width>71</width>
-       <height>20</height>
+       <width>340</width>
+       <height>52</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Canal 0</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_6">
-     <property name="geometry">
-      <rect>
-       <x>393</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 5</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_3">
-     <property name="geometry">
-      <rect>
-       <x>164</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 2</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_7">
-     <property name="geometry">
-      <rect>
-       <x>470</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 6</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_8">
-     <property name="geometry">
-      <rect>
-       <x>547</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 7</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_5">
-     <property name="geometry">
-      <rect>
-       <x>316</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 4</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_2">
-     <property name="geometry">
-      <rect>
-       <x>87</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 1</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_4">
-     <property name="geometry">
-      <rect>
-       <x>241</x>
-       <y>30</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal 3</string>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="checkBox">
+        <property name="text">
+         <string>Canal 0</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="checkBox_2">
+        <property name="text">
+         <string>Canal 1</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QCheckBox" name="checkBox_3">
+        <property name="text">
+         <string>Canal 2</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QCheckBox" name="checkBox_4">
+        <property name="text">
+         <string>Canal 3</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QCheckBox" name="checkBox_5">
+        <property name="text">
+         <string>Canal 4</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="checkBox_6">
+        <property name="text">
+         <string>Canal 5</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QCheckBox" name="checkBox_7">
+        <property name="text">
+         <string>Canal 6</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QCheckBox" name="checkBox_8">
+        <property name="text">
+         <string>Canal 7</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -193,176 +157,248 @@
      </font>
     </property>
     <property name="text">
-     <string>Pseudo Controle</string>
+     <string>Controle</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QGroupBox" name="groupBoxEntrada">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>100</y>
-      <width>381</width>
-      <height>241</height>
+      <x>30</x>
+      <y>110</y>
+      <width>431</width>
+      <height>341</height>
      </rect>
     </property>
     <property name="title">
      <string>Entrada</string>
     </property>
-    <widget class="QDoubleSpinBox" name="SpinBoxTensaoNivel">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>40</y>
-       <width>69</width>
-       <height>31</height>
+       <x>10</x>
+       <y>130</y>
+       <width>211</width>
+       <height>29</height>
       </rect>
      </property>
-     <property name="minimum">
-      <double>-4.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>4.000000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>0.010000000000000</double>
-     </property>
+     <layout class="QFormLayout" name="formLayout_5">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Tipo</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="comboBoxTipodeControle">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <item>
+         <property name="text">
+          <string>P</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PI</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PD</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PID</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>PI-D</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+     </layout>
     </widget>
-    <widget class="QLabel" name="labelTensaoNivel">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>40</y>
-       <width>51</width>
-       <height>31</height>
+       <x>10</x>
+       <y>190</y>
+       <width>119</width>
+       <height>111</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Tensão</string>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QRadioButton" name="radioButtonGanho">
+        <property name="text">
+         <string>Ganho</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QRadioButton" name="radioButtonTempo">
+        <property name="text">
+         <string>Tempo</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
-    <widget class="QLabel" name="label_3">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>90</y>
-       <width>31</width>
-       <height>31</height>
+       <x>210</x>
+       <y>190</y>
+       <width>181</width>
+       <height>111</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Sinal</string>
-     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Ganho (Kp)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_kp"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_ki">
+        <property name="text">
+         <string>Ganho (Ki)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_ki"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_kd">
+        <property name="text">
+         <string>Ganho (Kd)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_kd"/>
+      </item>
+     </layout>
     </widget>
-    <widget class="QSpinBox" name="spinBoxCanal">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>140</y>
-       <width>48</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="maximum">
-      <number>7</number>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_5">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>140</y>
-       <width>41</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Canal</string>
-     </property>
-    </widget>
-    <widget class="QDoubleSpinBox" name="SpinBoxPeriodo">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
        <x>260</x>
-       <y>140</y>
-       <width>51</width>
-       <height>31</height>
+       <y>40</y>
+       <width>131</width>
+       <height>62</height>
       </rect>
      </property>
-     <property name="singleStep">
-      <double>0.100000000000000</double>
-     </property>
-     <property name="value">
-      <double>1.000000000000000</double>
-     </property>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="labelTensaoNivel">
+        <property name="text">
+         <string>Tensão</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QDoubleSpinBox" name="SpinBoxTensaoNivel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="minimum">
+         <double>-4.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>4.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.010000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Período</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="SpinBoxPeriodo">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+        <property name="value">
+         <double>1.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
-    <widget class="QLabel" name="label_6">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>140</y>
-       <width>51</width>
-       <height>31</height>
+       <x>10</x>
+       <y>40</y>
+       <width>211</width>
+       <height>62</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Periodo</string>
-     </property>
-    </widget>
-    <widget class="QComboBox" name="comboBoxSinal">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>90</y>
-       <width>201</width>
-       <height>31</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButtonEnviar">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>200</y>
-       <width>80</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Enviar</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButtonCancel">
-     <property name="geometry">
-      <rect>
-       <x>220</x>
-       <y>200</y>
-       <width>80</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Cancelar</string>
-     </property>
+     <layout class="QFormLayout" name="formLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Canal</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="spinBoxCanal">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="maximum">
+         <number>7</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Sinal</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="comboBoxSinal">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
    <widget class="QCustomPlot" name="customPlot" native="true">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>360</y>
-      <width>381</width>
+      <x>520</x>
+      <y>350</y>
+      <width>631</width>
       <height>271</height>
      </rect>
     </property>
@@ -371,7 +407,7 @@
     <property name="geometry">
      <rect>
       <x>520</x>
-      <y>180</y>
+      <y>110</y>
       <width>301</width>
       <height>211</height>
      </rect>
@@ -381,31 +417,34 @@
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>180</y>
+      <y>110</y>
       <width>301</width>
       <height>211</height>
      </rect>
     </property>
    </widget>
-   <widget class="QCustomPlot" name="plotS3" native="true">
+   <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>420</y>
-      <width>301</width>
-      <height>211</height>
+      <x>240</x>
+      <y>590</y>
+      <width>191</width>
+      <height>27</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QCustomPlot" name="plotS4" native="true">
-    <property name="geometry">
-     <rect>
-      <x>850</x>
-      <y>420</y>
-      <width>301</width>
-      <height>211</height>
-     </rect>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
+    <widget class="QPushButton" name="pushButtonEnviar">
+     <property name="text">
+      <string>Enviar</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButtonCancel">
+     <property name="text">
+      <string>Cancelar</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -414,7 +453,7 @@
      <x>0</x>
      <y>0</y>
      <width>1200</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
