label altura do tanque

--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -412,7 +412,7 @@
     <property name="geometry">
      <rect>
       <x>520</x>
-      <y>350</y>
+      <y>320</y>
       <width>631</width>
       <height>271</height>
      </rect>
@@ -444,7 +444,7 @@
     <property name="geometry">
      <rect>
       <x>520</x>
-      <y>110</y>
+      <y>80</y>
       <width>301</width>
       <height>211</height>
      </rect>
@@ -471,12 +471,16 @@
       <enum>QFrame::Raised</enum>
      </property>
     </widget>
+    <zorder>frame_2</zorder>
+    <zorder>frame</zorder>
+    <zorder></zorder>
+    <zorder>frame_3</zorder>
    </widget>
    <widget class="QCustomPlot" name="plotS2" native="true">
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>110</y>
+      <y>80</y>
       <width>301</width>
       <height>211</height>
      </rect>
@@ -502,6 +506,7 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
+     <zorder>plotS2</zorder>
     </widget>
    </widget>
    <widget class="QSplitter" name="splitter">
@@ -527,6 +532,42 @@
      </property>
     </widget>
    </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>610</y>
+      <width>211</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Altura do tanque:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_altura">
+       <property name="text">
+        <string>0</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>cm</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
    <zorder>radioButtonMalhaAberta</zorder>
    <zorder>radioButtonMalhaFechada</zorder>
    <zorder>groupBoxSaida</zorder>
@@ -536,6 +577,12 @@
    <zorder>plotS2</zorder>
    <zorder>splitter</zorder>
    <zorder>customPlot</zorder>
+   <zorder>label_7</zorder>
+   <zorder>label_altura</zorder>
+   <zorder>label_9</zorder>
+   <zorder>frame</zorder>
+   <zorder>frame_3</zorder>
+   <zorder>label_7</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
